[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/GUI/button.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/OpenSans/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Scripts/InGameMenu.gd" type="Script" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[node name="InGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -135.5
margin_right = 82.0
margin_bottom = 135.5
alignment = 1

[node name="ContinueButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 51.0
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Text" type="Label" parent="VBoxContainer/ContinueButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.3333
margin_top = 6.33334
margin_right = 59.6667
margin_bottom = 45.3333
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Continue"
align = 1

[node name="RestartButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 164.0
margin_bottom = 106.0
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Text" type="Label" parent="VBoxContainer/RestartButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.3333
margin_top = 6.33334
margin_right = 59.6667
margin_bottom = 45.3333
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Restart"
align = 1

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 164.0
margin_bottom = 161.0
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Text" type="Label" parent="VBoxContainer/SettingsButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.3333
margin_top = 6.33334
margin_right = 59.6667
margin_bottom = 45.3333
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1

[node name="StopButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 164.0
margin_bottom = 216.0
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Text" type="Label" parent="VBoxContainer/StopButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.3333
margin_top = 6.33334
margin_right = 59.6667
margin_bottom = 45.3333
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Stop"
align = 1

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 220.0
margin_right = 164.0
margin_bottom = 271.0
texture_normal = ExtResource( 1 )
stretch_mode = 3

[node name="Text" type="Label" parent="VBoxContainer/ExitButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.3333
margin_top = 6.33334
margin_right = 59.6667
margin_bottom = 45.3333
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
align = 1

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
